[gd_scene load_steps=5 format=3 uid="uid://bs13vkhvmum6w"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_rfcd8"]
[ext_resource type="PackedScene" uid="uid://c8lwmwbmi7f06" path="res://ui/back_ground.tscn" id="2_1oxgv"]

[sub_resource type="LabelSettings" id="LabelSettings_jqssr"]
font_size = 128
outline_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_oxpwe"]
font_size = 24

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfcd8")
metadata/_edit_lock_ = true

[node name="BackGround" parent="." instance=ExtResource("2_1oxgv")]
layout_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.296
anchor_right = 0.5
anchor_bottom = 0.296
offset_left = -188.0
offset_top = -95.808
offset_right = 188.0
offset_bottom = 82.192
grow_horizontal = 2
grow_vertical = 2
text = "Snake"
label_settings = SubResource("LabelSettings_jqssr")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="MainButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -45.0
offset_right = 255.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="HBoxContainer" type="VBoxContainer" parent="MainButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -255.744
offset_right = 255.744
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="Singleplayer" type="Button" parent="MainButtons/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Singleplayer"

[node name="LocalMultiplayer" type="Button" parent="MainButtons/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Local Multiplayer"

[node name="HBoxContainer" type="HBoxContainer" parent="MainButtons/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="hostGame" type="Button" parent="MainButtons/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "host game"

[node name="JoinGame" type="Button" parent="MainButtons/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "join game"

[node name="Settings" type="Button" parent="MainButtons/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Quit" type="Button" parent="MainButtons/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -102.0
offset_right = 137.0
offset_bottom = -28.0
grow_vertical = 0
text = "v1.0.0
by Jokey"
label_settings = SubResource("LabelSettings_oxpwe")

[connection signal="pressed" from="MainButtons/HBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="MainButtons/HBoxContainer/LocalMultiplayer" to="." method="_on_local_multiplayer_pressed"]
[connection signal="pressed" from="MainButtons/HBoxContainer/HBoxContainer/hostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="MainButtons/HBoxContainer/HBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="MainButtons/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
